kube/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-api
  namespace: distributed-chat-bryce-carlos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: chat-app-api
    spec:
      containers:
        - name: chat-app-api
          image: brycecoon/distributed-chat-api:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
