kube/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: distributed-chat-bryce-carlos
  name: chat-db-deployment
  labels:
    app: chat-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-db
  template:
    metadata:
      labels:
        app: chat-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: schema-volume
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: schema-volume
          configMap:
            name: db-init
