kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-api-service
  namespace: distributed-chat-bryce-carlos
spec:
  selector:
    app: chat-app-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
