kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: distributed-chat-bryce-carlos
  name: db-svc
  labels:
    app: db-svc
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db-svc
