kube/client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-client-ingress
  namespace: distributed-chat-bryce-carlos
spec:
  rules:
    - host: carlos-bryce-chat.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-app-client-service
                port:
                  number: 8080
